--- a/example-smart-app/launch-patient.html
+++ b/example-smart-app/launch-patient.html
@@ -25,10 +25,10 @@
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
-      FHIR.oauth2.authorize({
-        'client_id': 'b9e4a499-e7ce-479a-910c-7f9e49f597c9',
-        'scope':  'patient/Patient.read patient/Observation.read launch/patient online_access openid profile'
-      });
+//       FHIR.oauth2.authorize({
+//         'client_id': 'b9e4a499-e7ce-479a-910c-7f9e49f597c9',
+//         'scope':  'patient/Patient.read patient/Observation.read launch/patient online_access openid profile'
+//       });
     </script>
     <div class="spinner">
       <div class="bounce1"></div>
