--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -26,7 +26,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': '<enter your client id here>',
+        'client_id': 'ee7f4e77-2be3-44aa-b0c8-37603c01c76e',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
